--- a/SquiLu-ourbiz/s/ourbiz/index.html
+++ b/SquiLu-ourbiz/s/ourbiz/index.html
@@ -244,6 +244,9 @@ input[type=checkbox]:focus + label, input[type=radio]:focus + label {
 
 </head>
 <body>
+<script language="javascript">
+if(dad.isIE) alert("Sorry but this application is not yet supported on Internet Explorer\nPlease try again with Firefox, Opera, Chrome.");
+</script>
 <div id="logShow"></div>
 </body>
 </html>
