Fix enumeration for time periodes, in SquiLu/Squirrel enum do not behave like in C/C++. Comment css html,body height 100%.

--- a/SquiLu-ourbiz/s/ourbiz/index.html
+++ b/SquiLu-ourbiz/s/ourbiz/index.html
@@ -9,7 +9,7 @@
 
 <style type="text/css">
 body, html {
-	height: 100%;
+	/*height: 100%;*/
 	margin: 0;
 	padding: 0;
 }
@@ -112,7 +112,7 @@ table {border-collapse:collapse;}
 .wrappedTable {width:100%;}
 .wrappedTable th {
   color: #eee; background: #4e8c0b; text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
-	border: 1px solid #fff;
+  border: 1px solid #fff;
 }
 .wrappedTable tr td {border: 1px solid #ccc; padding-left: 5px; padding-right:5px;}
 .wrappedTable tr:hover td { background: #CAEFFD; color: #0768B3; cursor: pointer; }
@@ -187,6 +187,7 @@ tbody.firstRight tr > td:nth-child(4) input {width:7em;}
 input:focus, textarea:focus, select:focus {background-color: yellow;} 
 input[type=checkbox]:focus + label, input[type=radio]:focus + label {
 	background-color: yellow;
+	border:1px dashed #ccc;
 }
 
 .context-menu {
