Add a hack fix to read binary data from ajax with IE.

--- a/SquiLu-ourbiz/s/ourbiz/index.html
+++ b/SquiLu-ourbiz/s/ourbiz/index.html
@@ -255,7 +255,7 @@ input[type=checkbox]:focus + label, input[type=radio]:focus + label {
 </head>
 <body>
 <script type="text/javascript">
-if(dad.isIE) alert("Sorry but this application is not yet supported on Internet Explorer\nPlease try again with Firefox, Opera, Chrome.");
+//if(dad.isIE) alert("Sorry but this application is not yet supported on Internet Explorer\nPlease try again with Firefox, Opera, Chrome.");
 </script>
 <div id="logShow"></div>
 </body>
